[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ocsp-checker"
version = "2.0.4"
description = "Library used to check the OCSP revocation status for a x509 digital certificate."
dependencies = ["cryptography>=45.0", "nassl>=5.3", "certifi"]

readme = { file = "README.md", content-type = "text/markdown" }
authors = [{ name = "Joe Gatt", email = "gattjoseph@hotmail.com" }]
license = "Apache-2.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
keywords = ["ssl", "tls", "ocsp", "python", "security"]
requires-python = ">=3.10"

[project.urls]
"homepage" = "https://github.com/gattjoe/OCSPChecker"
"documentation" = "https://github.com/gattjoe/OCSPChecker/blob/master/README.md"
"repository" = "https://github.com/gattjoe/OCSPChecker"
"changelog" = "https://github.com/gattjoe/OCSPChecker/blob/master/CHANGELOG.md"

[project.scripts]
ocspchecker = "ocspchecker.__main__:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312", "py313", "py314"]

[tool.pylint.main]
fail-under = 9.0
extension-pkg-allow-list = ["nassl._nassl"]

[tool.pylint."messages control"]
enable = ["c-extension-no-member"]

[tool.pylint.format]
max-line-length = 100

[tool.pyright]
root = ["ocspchecker"]
include = ["ocspchecker", "tests"]
reportMissingImports = true
reportMissingTypeStubs = true
pythonPlatform = "All"
typeCheckingMode = "basic"
